@@ -27,6 +27,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
 import net.minecraft.ChatFormatting;
+import net.minecraft.commands.CommandBuildContext;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.Commands;
 import net.minecraft.commands.SharedSuggestionProvider;
@@ -55,7 +56,7 @@ public class CompassCommand extends Command {
 
     @Override
     public LiteralArgumentBuilder<CommandSourceStack> getCommandBuilder(
-            LiteralArgumentBuilder<CommandSourceStack> base) {
+            LiteralArgumentBuilder<CommandSourceStack> base, CommandBuildContext context) {
         return base.then(Commands.literal("at")
                         .then(Commands.argument("location", Vec3Argument.vec3()).executes(this::compassAtVec3)))
                 .then(Commands.literal("share")
@@ -124,7 +125,7 @@ public class CompassCommand extends Command {
 
         String target = StringArgumentType.getString(context, "target");
 
-        LocationUtils.shareCompass(target, markers.get(0).location());
+        LocationUtils.shareCompass(target, markers.getFirst().location());
 
         return 1;
     }
@@ -240,7 +241,7 @@ public class CompassCommand extends Command {
             }
             place = exactMatch.get();
         } else {
-            place = places.get(0);
+            place = places.getFirst();
         }
 
         Models.Marker.USER_WAYPOINTS_PROVIDER.removeAllLocations();
