@@ -10,6 +10,7 @@ import com.wynntils.core.components.Managers;
 import com.wynntils.core.components.Models;
 import com.wynntils.core.components.Services;
 import com.wynntils.core.persisted.config.HiddenConfig;
+import com.wynntils.features.debug.MappingProgressFeature;
 import com.wynntils.features.map.MainMapFeature;
 import com.wynntils.models.marker.type.DynamicLocationSupplier;
 import com.wynntils.models.marker.type.MarkerInfo;
@@ -249,6 +250,11 @@ public final class MainMapScreen extends AbstractMapScreen {
 
         renderMapFeatures(poseStack, mouseX, mouseY);
 
+        if (Managers.Feature.getFeatureInstance(MappingProgressFeature.class).isEnabled()) {
+            renderChunkBorders(poseStack);
+            BUFFER_SOURCE.endBatch();
+        }
+
         // Cursor
         renderCursor(
                 poseStack,
@@ -438,7 +444,7 @@ public final class MainMapScreen extends AbstractMapScreen {
 
         if (shareCompass) {
             // FIXME: Find an intuitive way to share compasses with multiple waypoints
-            LocationUtils.shareCompass(target, markers.get(0).location());
+            LocationUtils.shareCompass(target, markers.getFirst().location());
         } else {
             LocationUtils.shareLocation(target);
         }
